fixed header spacing for mobile devices

--- a/lfMobile.css
+++ b/lfMobile.css
@@ -73,7 +73,7 @@ h1 {
     opacity: 1;
     font-family: 'Nabla', cursive;
     font-weight: 400;
-    font-size: 5rem;
+    font-size: 4rem;
     line-height: 7rem;
     text-shadow: 
         6px 4px 6px rgba(1, 106, 116, .5), /* Bottom */
